// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEuiTextDiff is rendered 1`] = `
<span
  class="euiTextDiff emotion-euiTextDiff"
>
  Orbiting th
  <del>
    i
  </del>
  <ins>
    o
  </ins>
  s
  <ins>
    e
  </ins>
   at a distance of roughly ninety-
  <del>
    two
  </del>
  <ins>
    nine
  </ins>
   
  <del>
    m
  </del>
  <ins>
    b
  </ins>
  illion 
  <del>
    mile
  </del>
  <ins>
    yard
  </ins>
  s is 
  <del>
    a
  </del>
  n
  <del>
     ut
  </del>
  <ins>
    o
  </ins>
  t
  <del>
    erly
  </del>
   insignificant 
  <del>
    little
  </del>
  <ins>
    dwaf
  </ins>
   
  <del>
    blu
  </del>
  <ins>
    r
  </ins>
  e
  <ins>
    d
  </ins>
   green planet whose ape- 
  <del>
    de
  </del>
  <ins>
    a
  </ins>
  scended life forms are so amazingly primitive that they still think digital 
  <del>
    wat
  </del>
  <ins>
    clo
  </ins>
  c
  <del>
    he
  </del>
  <ins>
    k
  </ins>
  s are a pretty neat idea.
</span>
`;

exports[`useEuiTextDiff props custom components is rendered 1`] = `
<span
  class="euiTextDiff emotion-euiTextDiff"
>
  <p>
    Orbiting th
  </p>
  <s>
    i
  </s>
  <strong>
    o
  </strong>
  <p>
    s
  </p>
  <strong>
    e
  </strong>
  <p>
     at a distance of roughly ninety-
  </p>
  <s>
    two
  </s>
  <strong>
    nine
  </strong>
  <p>
     
  </p>
  <s>
    m
  </s>
  <strong>
    b
  </strong>
  <p>
    illion 
  </p>
  <s>
    mile
  </s>
  <strong>
    yard
  </strong>
  <p>
    s is 
  </p>
  <s>
    a
  </s>
  <p>
    n
  </p>
  <s>
     ut
  </s>
  <strong>
    o
  </strong>
  <p>
    t
  </p>
  <s>
    erly
  </s>
  <p>
     insignificant 
  </p>
  <s>
    little
  </s>
  <strong>
    dwaf
  </strong>
  <p>
     
  </p>
  <s>
    blu
  </s>
  <strong>
    r
  </strong>
  <p>
    e
  </p>
  <strong>
    d
  </strong>
  <p>
     green planet whose ape- 
  </p>
  <s>
    de
  </s>
  <strong>
    a
  </strong>
  <p>
    scended life forms are so amazingly primitive that they still think digital 
  </p>
  <s>
    wat
  </s>
  <strong>
    clo
  </strong>
  <p>
    c
  </p>
  <s>
    he
  </s>
  <strong>
    k
  </strong>
  <p>
    s are a pretty neat idea.
  </p>
</span>
`;
